--- a/index.html
+++ b/index.html
@@ -15,17 +15,8 @@
       </header>
 
       <section class="controls" aria-live="polite">
-        <button id="play-next" class="btn btn-primary" type="button">
+        <button id="action-button" class="btn btn-primary" type="button">
           Start neste
-        </button>
-        <button
-          id="fade-out"
-          class="btn btn-secondary"
-          type="button"
-          aria-disabled="true"
-          disabled
-        >
-          Fade ut
         </button>
         <p id="status-line" class="status-line" role="status">
           Klar &middot; Ingen gjentakelser i denne økta.
