--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>BingoBuzz</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="description" content="BingoBuzz – spill neste festlige bingolyd med et klikk.">
+    <link rel="manifest" href="/app.webmanifest">
+    <meta name="theme-color" content="#0a0818">
+    <link rel="apple-touch-icon" href="assets/icons/pwa_192_192.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
   </head>
   <body>
     <main class="big-btn-screen" aria-live="polite">
