--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="apple-touch-icon" href="./assets/icons/pwa_192_192.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F6F9W643D6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag("js", new Date());
+      gtag("config", "G-F6F9W643D6");
+    </script>
   </head>
   <body>
     <main class="big-btn-screen" aria-live="polite">
